# Proyecto_Final_MLOps_Yesid

./: .gitignore  Dockerfile  README.md  api.py  index.html  main.py  prefect_flow.py  pyproject.toml  requirements.txt
models/: credit_risk_model.joblib
notebooks/: 01_eda.ipynb
src/app/train/: etl.py  feature_engineer.py  task_train.py  train.py  train_mlflow_optuna.py
