[project]
name = "proyecto-final-mlops-yesid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "imbalanced-learn>=0.14.0",
    "pandas>=2.3.2",
    "scikit-learn>=1.5.1",
    "mlflow>=2.14.3",
    "optuna>=3.6.1",
    "numpy>=2.0.1",
]

[dependency-groups]
dev = [
    "imbalanced-learn>=0.14.0",
]
